--- a/app-of-apps-chart/values.yaml
+++ b/app-of-apps-chart/values.yaml
@@ -1,14 +1,13 @@
 clusters:
-- name: minikube
-  destinationServer: https://kubernetes.default.svc
-  apps:
-    prometheus:
-      enabled: true
-      version: "9.7.4"
-
-    sampleApp:
-      enabled: true
-      branch: HEAD
+#- name: minikube
+#  destinationServer: https://kubernetes.default.svc
+#  apps:
+#    prometheus:
+#      enabled: true
+#      version: "9.7.4"
+#    sampleApp:
+#      enabled: true
+#      branch: HEAD
 
 - name: cluster-1
   destinationServer: https://192.168.64.5:8443
