--- a/app-of-apps-chart/values.yaml
+++ b/app-of-apps-chart/values.yaml
@@ -9,15 +9,15 @@ clusters:
 #      enabled: true
 #      branch: HEAD
 
-- name: cluster-1
-  destinationServer: https://192.168.64.5:8443
-  apps:
-    prometheus:
-      enabled: true
-      version: "9.7.4"
-    sampleApp:
-      enabled: true
-      branch: HEAD
+#- name: cluster-1
+#  destinationServer: https://192.168.64.5:8443
+#  apps:
+#    prometheus:
+#      enabled: true
+#      version: "9.7.4"
+#    sampleApp:
+#      enabled: true
+#      branch: HEAD
 
 - name: cluster-2
   destinationServer: https://192.168.64.6:8443
